# tsca-informaldev

./: .gitignore  .gitmodules  SCAML-SETUP.md  SETUP.txt
broker/: .gitignore  broker.ml  ccgen.tztype  dune  frozen.data  frozen.ml  funny.ml  wrapper.ml  wrapper2.tz
crowdfunding/: crowdfunding.ml  crowdfunding.tz  dune
frozen/: dune  frozen.ml
