(executable
 (name broker)
 (modules broker)
 (libraries scaml.scamlib typerep ptime kxclib)
 (preprocess (pps scaml.inlined ppx_deriving.show))
 (preprocessor_deps (file wrapper.tz) (file funny.data)))

(executable
 (name wrapper)
 (modules wrapper)
 (libraries scaml.scamlib typerep ptime)
 (preprocess (pps scaml.inlined ppx_deriving.show)))

(executable
 (name funny)
 (modules funny)
 (libraries scaml.scamlib)
 (preprocess (pps scaml.inlined ppx_deriving.show)))

(rule
 (target wrapper.tz)
 (deps wrapper.exe)
 (mode (promote (until-clean)))
 (action (with-stdout-to %{target}
  (run %{deps}))))

(rule
 (target broker.tz)
 (deps broker.exe)
 (action (with-stdout-to %{target}
  (run %{deps} -broker-code))))

(rule
 (target funny.tz)
 (mode (promote (until-clean)))
 (deps funny.exe)
 (action (with-stdout-to %{target}
          (run %{deps} -code))))

(rule
 (target funny.data)
 (mode (promote (until-clean)))
 (deps funny.exe)
 (action (with-stdout-to %{target}
          (run %{deps} -packed))))

(rule
 (target funny.type)
 (mode (promote (until-clean)))
 (deps funny.exe)
 (action (with-stdout-to %{target}
          (run %{deps} -ccgen-type))))

(env
 (dev
  (flags (:standard -warn-error -A -g))))
